2009-02-04  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/capplet-utils.c: (capplet_model_find_max_name_suffix),
	(capplet_get_increasable_name), (capplet_get_max_name_num),
	(capplet_get_original_name):
	* capplet/capplet-utils.h:
	Updated to deal with 'Copy of Copy of ..' things.
	* capplet/nwam_location_dialog.c: (nwam_pref_init),
	(nwam_update_obj), (apply),
	(nwam_location_connection_enabled_toggled_cb), (on_button_clicked),
	(response_cb), (tree_model_foreach_find_enabled_env):
	* common/nwamui_object.c: (nwamui_object_set_activation_mode):
	OK really does things.

2009-02-04  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_env.h, common/nwamui_env.c: 
	  Add ACTIVE property to get the state of the loc object when read
	  from libnwam. ENABLED can now be used to reflect the "desired" state
	  which will be acted upon on a call to commit.

2009-02-04  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam-manager-properties.glade:
	  Fix response id and icon path.

2009-02-04  Calum Benson  <calum.benson@sun.com>

	* capplet/nwam-manager-properties.glade:

	Add radio buttons for swapping between CLI and SMF for VPN apps.

2009-02-04  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam-manager-properties.glade:
	* capplet/nwam_condition_vbox.c:
	  Add support for combo selection of NCU/LOC/ENM based on field
	  selected.
	* common/nwamui_cond.c, common/nwamui_cond.h:
	  Add INCLUDE/DOES_NOT_INCLUDE conditions operators.
	* common/nwamui_env.c:
	  Remove obsolete functions.
	* common/nwamui_wifi_net.c, common/nwamui_wifi_net.h:
	  Add channel property.
	* capplet/nwam_conn_conf_ip_panel.c: 
	  Update to print panel

2009-02-03  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/capplet-utils.c: (tree_model_find_object_cb),
	(capplet_model_find_max_name_suffix),
	(capplet_get_increasable_name), (capplet_reset_increasable_name):
	* capplet/capplet-utils.h:
	Add simply functions to get increased name.
	* capplet/nwam_location_dialog.c: (refresh), (on_button_clicked):